opensource publicatie 17-01-2025